# generic_logger

./: .gitignore  Cargo.toml  README.md
src/: fileio_logger.rs  lib.rs  logger.rs  stdio_logger.rs
